--- a/assets/index.html
+++ b/assets/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css" />
+    <style type="text/css" media="screen">
+      <!-- 
+          @import url("/assets/main.css");
+      -->
+    </style>
     <title>Оценивалки</title>
 </head>
 <body>
-    <h1>Оценивалки</h1>
+    <h1>
+      {{ .title }}
+    </h1>
     <p>Оценивай вещички ,это сохранится в датабазу и мы высчитаем средний результат!</p>
     <br/>
     <span onclick="gfg(1)"
